gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-self-is-anon.rs
struct Foo {
    field: i32,
}

impl Foo {
    fn foo<'a>(&self, x: &'a Foo) -> &'a Foo {

        if true { x } else { self }
// { dg-error "" "" { target *-*-* } .-1 }

    }
}

fn main() {}

